SimplePlus/target/generated-sources/antlr4/spvmParser/SPVMParser.java
// Generated from SPVM.g4 by ANTLR 4.4
package spvmParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__34=1, T__33=2, T__32=3, T__31=4, T__30=5, T__29=6, T__28=7, T__27=8, 
		T__26=9, T__25=10, T__24=11, T__23=12, T__22=13, T__21=14, T__20=15, T__19=16, 
		T__18=17, T__17=18, T__16=19, T__15=20, T__14=21, T__13=22, T__12=23, 
		T__11=24, T__10=25, T__9=26, T__8=27, T__7=28, T__6=29, T__5=30, T__4=31, 
		T__3=32, T__2=33, T__1=34, T__0=35, LABEL=36, NUMBER=37, REGISTER=38, 
		WS=39, LINECOMMENTS=40, BLOCKCOMMENTS=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'mult'", "'sw'", "'move'", "'leq'", "'bgeq'", "'neq'", "'b'", 
		"'addi'", "'ls'", "'print'", "'push'", "'eq'", "'neg'", "'lmem'", "'lw'", 
		"'('", "'add'", "'sub'", "':'", "'beq'", "'li'", "'jal'", "'bleq'", "'geq'", 
		"'or'", "'halt'", "'jr'", "'smem'", "'div'", "'pop'", "'gr'", "')'", "'and'", 
		"'not'", "'top'", "LABEL", "NUMBER", "REGISTER", "WS", "LINECOMMENTS", 
		"BLOCKCOMMENTS"
	};
	public static final int
		RULE_program = 0, RULE_assembly = 1;
	public static final String[] ruleNames = {
		"program", "assembly"
	};

	@Override
	public String getGrammarFileName() { return "SPVM.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public AssemblyContext assembly(int i) {
			return getRuleContext(AssemblyContext.class,i);
		}
		public List<AssemblyContext> assembly() {
			return getRuleContexts(AssemblyContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPVMListener ) ((SPVMListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPVMListener ) ((SPVMListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__34) | (1L << T__33) | (1L << T__32) | (1L << T__31) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__27) | (1L << T__26) | (1L << T__25) | (1L << T__24) | (1L << T__23) | (1L << T__22) | (1L << T__21) | (1L << T__20) | (1L << T__18) | (1L << T__17) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << LABEL))) != 0)) {
				{
				{
				setState(4); assembly();
				}
				}
				setState(9);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssemblyContext extends ParserRuleContext {
		public Token instr;
		public Token arg1;
		public Token arg2;
		public Token arg3;
		public Token offset;
		public TerminalNode LABEL() { return getToken(SPVMParser.LABEL, 0); }
		public TerminalNode REGISTER(int i) {
			return getToken(SPVMParser.REGISTER, i);
		}
		public List<TerminalNode> REGISTER() { return getTokens(SPVMParser.REGISTER); }
		public TerminalNode NUMBER() { return getToken(SPVMParser.NUMBER, 0); }
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPVMListener ) ((SPVMListener)listener).enterAssembly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPVMListener ) ((SPVMListener)listener).exitAssembly(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assembly);
		try {
			setState(126);
			switch (_input.LA(1)) {
			case T__24:
				enterOuterAlt(_localctx, 1);
				{
				setState(10); ((AssemblyContext)_localctx).instr = match(T__24);
				setState(11); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(12); ((AssemblyContext)_localctx).instr = match(T__5);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(13); ((AssemblyContext)_localctx).instr = match(T__0);
				setState(14); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 4);
				{
				setState(15); ((AssemblyContext)_localctx).instr = match(T__18);
				setState(16); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(17); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(18); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 5);
				{
				setState(19); ((AssemblyContext)_localctx).instr = match(T__17);
				setState(20); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(21); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(22); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__34:
				enterOuterAlt(_localctx, 6);
				{
				setState(23); ((AssemblyContext)_localctx).instr = match(T__34);
				setState(24); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(25); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(26); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 7);
				{
				setState(27); ((AssemblyContext)_localctx).instr = match(T__6);
				setState(28); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(29); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(30); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 8);
				{
				setState(31); ((AssemblyContext)_localctx).instr = match(T__22);
				setState(32); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(33); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 9);
				{
				setState(34); ((AssemblyContext)_localctx).instr = match(T__2);
				setState(35); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(36); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(37); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 10);
				{
				setState(38); ((AssemblyContext)_localctx).instr = match(T__10);
				setState(39); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(40); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(41); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 11);
				{
				setState(42); ((AssemblyContext)_localctx).instr = match(T__1);
				setState(43); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(44); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 12);
				{
				setState(45); ((AssemblyContext)_localctx).instr = match(T__23);
				setState(46); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(47); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(48); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 13);
				{
				setState(49); ((AssemblyContext)_localctx).instr = match(T__29);
				setState(50); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(51); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(52); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 14);
				{
				setState(53); ((AssemblyContext)_localctx).instr = match(T__11);
				setState(54); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(55); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(56); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__31:
				enterOuterAlt(_localctx, 15);
				{
				setState(57); ((AssemblyContext)_localctx).instr = match(T__31);
				setState(58); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(59); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(60); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 16);
				{
				setState(61); ((AssemblyContext)_localctx).instr = match(T__4);
				setState(62); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(63); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(64); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 17);
				{
				setState(65); ((AssemblyContext)_localctx).instr = match(T__26);
				setState(66); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(67); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(68); ((AssemblyContext)_localctx).arg3 = match(REGISTER);
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 18);
				{
				setState(69); ((AssemblyContext)_localctx).instr = match(T__33);
				setState(70); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(71); ((AssemblyContext)_localctx).offset = match(NUMBER);
				setState(72); match(T__19);
				setState(73); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(74); match(T__3);
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 19);
				{
				setState(75); ((AssemblyContext)_localctx).instr = match(T__20);
				setState(76); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(77); ((AssemblyContext)_localctx).offset = match(NUMBER);
				setState(78); match(T__19);
				setState(79); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(80); match(T__3);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 20);
				{
				setState(81); ((AssemblyContext)_localctx).instr = match(T__7);
				setState(82); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(83); ((AssemblyContext)_localctx).offset = match(NUMBER);
				setState(84); match(T__19);
				setState(85); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(86); match(T__3);
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 21);
				{
				setState(87); ((AssemblyContext)_localctx).instr = match(T__21);
				setState(88); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(89); ((AssemblyContext)_localctx).offset = match(NUMBER);
				setState(90); match(T__19);
				setState(91); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(92); match(T__3);
				}
				break;
			case LABEL:
				enterOuterAlt(_localctx, 22);
				{
				setState(93); ((AssemblyContext)_localctx).instr = match(LABEL);
				setState(94); match(T__16);
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 23);
				{
				setState(95); ((AssemblyContext)_localctx).instr = match(T__28);
				setState(96); ((AssemblyContext)_localctx).arg3 = match(LABEL);
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 24);
				{
				setState(97); ((AssemblyContext)_localctx).instr = match(T__15);
				setState(98); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(99); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(100); ((AssemblyContext)_localctx).arg3 = match(LABEL);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 25);
				{
				setState(101); ((AssemblyContext)_localctx).instr = match(T__12);
				setState(102); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(103); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(104); ((AssemblyContext)_localctx).arg3 = match(LABEL);
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 26);
				{
				setState(105); ((AssemblyContext)_localctx).instr = match(T__30);
				setState(106); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(107); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(108); ((AssemblyContext)_localctx).arg3 = match(LABEL);
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 27);
				{
				setState(109); ((AssemblyContext)_localctx).instr = match(T__27);
				setState(110); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(111); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				setState(112); ((AssemblyContext)_localctx).arg3 = match(NUMBER);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 28);
				{
				setState(113); ((AssemblyContext)_localctx).instr = match(T__14);
				setState(114); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(115); ((AssemblyContext)_localctx).arg2 = match(NUMBER);
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 29);
				{
				setState(116); ((AssemblyContext)_localctx).instr = match(T__32);
				setState(117); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				setState(118); ((AssemblyContext)_localctx).arg2 = match(REGISTER);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 30);
				{
				setState(119); ((AssemblyContext)_localctx).instr = match(T__13);
				setState(120); ((AssemblyContext)_localctx).arg3 = match(LABEL);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 31);
				{
				setState(121); ((AssemblyContext)_localctx).instr = match(T__8);
				setState(122); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 32);
				{
				setState(123); ((AssemblyContext)_localctx).instr = match(T__25);
				setState(124); ((AssemblyContext)_localctx).arg1 = match(REGISTER);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 33);
				{
				setState(125); ((AssemblyContext)_localctx).instr = match(T__9);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}